create-cluster-by-eskctrl-with-sample-deployment/k8s-eg-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-web-docker
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    name: sample-web-docker
